Legger til litt penere styling

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,25 @@
 extends layout
+
 block content
-  div.title-container
-    h1 IS-218 Oppgave 2
-    p Gruppe 10 
-  div.map-container
-    div#map
-  script.
-    window.shelterData = !{shelterData || 'null'};
-    window.bunkerData = !{bunkerData || 'null'};
-  script(
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-    crossorigin=""
-  )
-  script(src='/leaflet/core.js')
+    div.content-container
+        div.title-container
+            h1 IS-218 Oppgave 2
+            p Gruppe 10
+        div.map-container
+            div#map
+        div.info-container
+            div.left
+                div some info left
+            div.right
+                div some info right
+
+    script.
+        window.shelterData = !{shelterData || 'null'};
+        window.bunkerData = !{bunkerData || 'null'};
+    
+    script(
+        src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""
+    )
+    script(src='/leaflet/core.js')
