--- a/views/index.pug
+++ b/views/index.pug
@@ -22,4 +22,5 @@ block content
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""
     )
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js")
     script(src='/leaflet/core.js')
