Tweaker styling, små justeringer

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,9 +9,11 @@ block content
             div#map
         div.info-container
             div.left
-                div some info left
+                h3 Overskrift venstre
+                p Tekst venstre
             div.right
-                div some info right
+                h3 Overskrift høyre
+                p Tekst høyre
 
     script.
         window.shelterData = !{shelterData || 'null'};
