--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,11 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2em;
-}
-
-.title-container h1 {
-    color: #333;
+    padding: 2em 2em 0 2em;
 }
 
 .title-container p {
@@ -40,5 +36,12 @@
     display: flex;
     justify-content: space-evenly;
     border-radius: 8px;
-    padding: 2em;
+    padding: 0 2em 2em 2em;
+}
+
+.left, .right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
 }
