--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
+    color: #333;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
