Tweaker styling, tilrettelegger for noe oppgtekst

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,10 +10,10 @@ block content
         div.info-container
             div.left
                 h3 Overskrift venstre
-                p Tekst venstre
+                p Går an å skrive noe om oppgaven på denne siden
             div.right
                 h3 Overskrift høyre
-                p Tekst høyre
+                p Går an å skrive noe ANNET om oppgaven på denne siden
 
     script.
         window.shelterData = !{shelterData || 'null'};
