--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -37,6 +37,7 @@
     justify-content: space-evenly;
     border-radius: 8px;
     padding: 0 2em 2em 2em;
+    gap: 2em;
 }
 
 .left, .right {
@@ -44,4 +45,9 @@
     flex-direction: column;
     align-items: center;
     gap: 1em;
+    border: #bbcad5 2px solid;
+    border-radius: 8px;
+    padding: 1em;
+    flex: 1;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
