--- a/views/index.pug
+++ b/views/index.pug
@@ -34,7 +34,7 @@ block content
     div.info-container
       div.left
         h3 Overskrift venstre
-        p Går an å skrive noe om oppgaven på denne siden
+        p Går an åå skrive noe om oppgaven på denne siden
       div.right
         h3 Overskrift høyre
         p Går an å skrive noe ANNET om oppgaven på denne siden
