Refactor fix refactorert dataservice ut av index.js

--- a/views/index.pug
+++ b/views/index.pug
@@ -47,4 +47,4 @@ block content
     crossorigin=""
   )
   script(src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js")
-  script(src='/leaflet/core.js')
+  script(type="module", src='/js/main.js')
