--- a/views/index.pug
+++ b/views/index.pug
@@ -48,3 +48,4 @@ block content
   )
   script(src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.js")
   script(type="module", src='/js/main.js')
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js")
