--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,4 +1,3 @@
-doctype html
 html
   head
     title= title
@@ -9,6 +8,11 @@ html
       rel="stylesheet" 
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    )
+    link(
+      rel="stylesheet" 
+      href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css"
       crossorigin=""
     )
   body
